# raccoon-robots

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
robots/2026-spring/axht-3085/cube-bot/: .gitignore  .raccoonignore  README.md  pyproject.toml  raccoon.project.yml  racoon.calibration.yml  upload.sh
robots/2026-spring/axht-3085/cube-bot/.mission_snapshots/: push_crate.json
robots/2026-spring/axht-3085/cube-bot/config/: 2026-game-table-v2-glb.ftmap  2026-game-table__sim_drivable.ftmap  connection.yml  hardware.yml  missions.yml  motors.yml  robot.yml  run-configurations.yml  servos.yml
robots/2026-spring/axht-3085/cube-bot/src/: main.py  mission_params.py  params.py
robots/2026-spring/axht-3085/cube-bot/tests/: test_params.py  test_setup_calibration_scale.py
robots/2026-spring/axht-3085/drumbot/: .claudeignore  .gitattributes  .gitignore  .raccoonignore  AGENTS.md  DRUM_KALIBRIERUNG_FIX.md  EJECT_VERIFICATION.md  README.md  mission_layouts.json  pyproject.toml  raccoon.project.yml  racoon.calibration.yml  todo
robots/2026-spring/axht-3085/drumbot/.mission_snapshots/: setup.json
robots/2026-spring/axht-3085/drumbot/config/: connection.yml  hardware.yml  missions.yml  motors.yml  robot.yml  run-configurations.yml  services.yml  servos.yml
robots/2026-spring/axht-3085/drumbot/src/: Drum_lifting_service.py  main.py  transport_wire_patch.py
robots/2026-spring/axht-3085/drumbot/tests/: conftest.py  test_color_detection_flow.py  test_drum_motor_service.py  test_eject_alignment_lock.py  test_eject_edge_cases.py  test_fake_color_detection.py  test_range_finder_service.py  test_rotate_to_next_empty_pocket.py  (+2 more)
(+410 files in other folders)
