[project]
name = "drumbot"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "raccoon-cli==0.1.100",
    "raccoon-transport==0.1.33",
    "raccoon-stubs==1.0.157",
]

[project.scripts]
start = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
